<resources>
    <string name="app_name">Youtube Browser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_poweroff">Quitter l\'application</string>
    <string name="nav_settings">Paramètres</string>
    <string name="nav_about">À propos</string>

    <string name="action_clear">Vider</string>
    <string name="action_home">Accueil</string>
    <string name="action_refresh">Actualiser</string>

    <string name="channel_name">Téléchargements</string>
    <string name="channel_description">Données relatives aux téléchargements</string>

    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="thumbnail">Miniature</string>
    <string name="to">à</string>
    <string name="from">de</string>
    <string name="download">Télécharger</string>
    <string name="cancel">Annuler</string>
    <string name="quit">Quitter</string>
    <string name="downloads">Téléchargements</string>

    <string name="cut_times">Découpage de la vidéo :</string>
    <string name="start_time">00:00:00</string>
    <string name="confirm_exit">Êtes-vous sûr de vouloir quitter ?</string>

</resources>
