<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/baseline_get_app_black_24"
            android:title="@string/downloads"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_build_black_24"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_help_outline_black_24"
            android:title="@string/nav_about" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_poweroff"
            android:icon="@drawable/baseline_power_settings_new_black_24"
            android:title="@string/nav_poweroff"/>
    </group>

</menu>
