<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:importantForAutofill="no">

    <!-- Row 0 -->
    <EditText
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_width="match_parent"
        android:id="@+id/titleEditText"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="12sp"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <!-- Row 1 -->
    <ImageView
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowSpan="2"
        android:id="@+id/thumbnailImageView"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:contentDescription="@string/thumbnail"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:text="@string/cut_times"/>


    <!-- Row 2 -->
    <TextView
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/from"
        android:labelFor="@id/startTimeEditText"/>

    <EditText
        android:layout_row="2"
        android:layout_column="2"
        android:layout_width="wrap_content"
        android:id="@+id/startTimeEditText"
        android:inputType="time"
        android:textSize="12sp"
        android:text="@string/start_time"/>

    <TextView android:layout_row="2"
        android:layout_column="3"
        android:text="@string/to"
        android:labelFor="@id/endTimeEditText"/>

    <EditText
        android:layout_row="2"
        android:layout_column="4"
        android:layout_width="wrap_content"
        android:id="@+id/endTimeEditText"
        android:textSize="12sp"
        android:inputType="time"/>

</GridLayout>